# 2023_lecture

./: .gitignore  README.md
data_science_advanced_course/first_half/: k-means.py  question_1.java  question_1.py  sangyohi.csv  sangyohi.xlsx  sangyohi_xlsx.csv  ~$sangyohi.xlsx
ict_design/: Gmtime-utf8.jar:Zone.Identifier
ict_design/jp/co/ns_sol/sysrdc/opal/gmtime/: GmtimeCalculator.java  TmStruct.java
ict_design/test/jp/co/ns_sol/sysrdc/opal/gmtime/: MyGmtimeTest.java
intelligence_system_programming/: nurse_schedulin.py  nurse_scheduling.py  nurse_scheduling_by_chatgpt.py  nurse_sheduling_request.py  pyproject.toml
intelligence_system_programming/second-half/home_speech/: exam_image.py  home_speech.ipynb  home_speech.py
intelligence_system_programming/second-half/sample/: BERT_quiz.py  BertSample1.ipynb  BertSample2.ipynb  CNNSample.ipynb  CNN_wisdom.py
it_architecture/ex_ans/: ex_1.rs  ex_2.rs
